--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "psr/log": "1.0.0"
+        "psr/log": "1.0.0",
+        "zendframework/zend-stdlib": "2.4.x"
     },
     "autoload": {
         "psr-4": {
